# banicaMP

./: .gitignore  CMakeLists.txt  FLAC_decoder.cpp  MPEG_decoder.cpp  MPEG_decoder.h  README.md  a.out  decoder.h  extensions.hpp  flac_decoder.cpp  flac_decoder.h  main.cpp  song.cpp  song.h
config/: CMakeLists.txt  config.cpp  config.h
decode/: CMakeLists.txt  FLAC_decoder.cpp  FLAC_decoder.h  MPEG_decoder.cpp  MPEG_decoder.h  README.md  decoder.h  get.cpp  get.h
ipc/: CMakeLists.txt  README.md  get.h.in  interprocess.h
ipc/unix/: CMakeLists.txt  README.md  interprocess.cpp  interprocess.h
ipc/windows/: CMakeLists.txt  README.md  interprocess.cpp  interprocess.h
memory/: CMakeLists.txt  memory.cpp  memory.h  memory_linux.cpp  memory_windows.cpp
play/: README.md  aconfig.h  play.h
play/linux/: play.cpp  play.h  version.h
playback/: CMakeLists.txt  README.md  encodings.h  song.cpp  song.h
playback/audio/: CMakeLists.txt  README.md  audio.h.in  filter.hpp
playback/audio/linux/: CMakeLists.txt  README.md  aplay.c  aplay.cpp  aplay.h  audio.cpp  audio.h  audio.h.in
playback/audio/portaudio/: CMakeLists.txt  audio.cpp  audio.h  device_manager.cpp  device_manager.h  stream.cpp  stream.h  test_device_manager.cpp
playback/audio/windows/: README.md  play.h
playback/play/: CMakeLists.txt  play.h
playback/play/linux/: CMakeLists.txt  README.md  aplay  aplay.c  aplay.h  aplay_classic.c  filter.hpp  play.cpp  play.h  play.h.in  test.c
playback/play/windows/: play.cpp
playback/playlist/: CMakeLists.txt  encodings.h  event.cpp  event.h  playlist.cpp  playlist.h  song.cpp  song.h  tinydir.h
playback/playlist/vector/: vector.h  vector.hpp
test/: test.cpp  test_MPEG.cpp  test_config.cpp  test_decode.cpp  test_decode2.cpp  test_decode3.cpp  test_memory.cpp  test_play.cpp  test_play1.cpp  test_play2.cpp  test_play_file.cpp  test_playlist.cpp  test_song.cpp  test_tinydir.cpp  test_vector.cpp  test_vector2.cpp
vector/: vector.cpp  vector.h  vector.hpp
